Unit test that contenteditable links' show an I-beam mouse cursor

Bug: 774058
Change-Id: I05e14895d59609144b76264f04d081ee8657caeb